- Added global wind for projectile explosion and Smoke Shell effects
- Added smoke cloud merging to reduce entity count
- Added chunkloading option for smoke clouds to reduce entity lingering
 - Can be configured
- Added gas cloud to optimize potion fluid shell effect instead of spawning multiple area effect clouds
- Added Gas Mask
 - Comes with Curios and Trinkets compat
Removed:
- Removed legacy cannon plume appearance client config, can now only turn plumes on or off in clientside config
- Removed single-projectile shrapnel, grapeshot, and fluid blob entities
Changed:
- Updated Ritchie's Projectile Library dependency to 2.0.0
 - Improved chunkloading performance
 - Replaced PreciseProjectile interface with tag #ritchiesprojectilelib:precise_motion
 - Changed screen shake to use Ritchies Projectile Library code rather than Create Big Cannons code
- Separated smoke shell smoke particle (createbigcannons:smoke_shell_smoke) from cannon smoke particle (createbigcannons:cannon_smoke)
 - Both still use the same textures and particle definition by default
- Changed how big cannon plumes look
- Changed description of some ponder categories
- Rework cannon plume to use better particles
- Changed default cannon mount angle goggle display precision from 1 to 2 digits
- Improved cannon heating ponder information to clarify layering
- Improved sound effects of cannon firing
- Tweaked speed and entity damage attributes of Drop Mortar Shell
- Tweaked shrapnel spread and shrapnel damage values of Shrapnel Shell
- Tweaked grapeshot spread and grapeshot damage values of Bag of Grapeshot
- Changed all shrapnel projectiles to a single projectile burst entity to reduce entity count
 - Includes: Shrapnel Shell, Bag of Grapeshot, Fluid Shell, and Flak Autocannon Round
 - Harder to create chunkbans with new system