@@ -1,0 +1,15 @@
+{
+	"textures": [
+		"createbigcannons:cannon_smoke_fallback0",
+		"createbigcannons:cannon_smoke_fallback1",
+		"createbigcannons:cannon_smoke_fallback2",
+		"createbigcannons:cannon_smoke_fallback3",
+		"createbigcannons:cannon_smoke_fallback4",
+		"createbigcannons:cannon_smoke_fallback5",
+		"createbigcannons:cannon_smoke_fallback6",
+		"createbigcannons:cannon_smoke_fallback7",
+		"createbigcannons:cannon_smoke_fallback8",
+		"createbigcannons:cannon_smoke_fallback9",
+		"createbigcannons:cannon_smoke_fallback10"
+	]
+}
